--- a/lighting_control_system/style.css
+++ b/lighting_control_system/style.css
@@ -25,3 +25,17 @@ body {
   font-family: 'Segment7Standard';
   line-height: 1 !important;
 }
+
+.colorpicker-2x .colorpicker-saturation {
+  width: 200px;
+  height: 200px;
+}
+.colorpicker-2x .colorpicker-hue,
+.colorpicker-2x .colorpicker-alpha {
+  width: 30px;
+  height: 200px;
+}
+.colorpicker-2x .colorpicker-color,
+.colorpicker-2x .colorpicker-color div {
+  height: 30px;
+}
