Update web page with the current color display

--- a/lighting_control_system/style.css
+++ b/lighting_control_system/style.css
@@ -26,6 +26,11 @@ body {
   line-height: 1 !important;
 }
 
+#color {
+  background-color: #000000;
+  height: 60px;
+}
+
 .colorpicker-2x .colorpicker-saturation {
   width: 200px;
   height: 200px;
