--- a/lighting_control_system/style.css
+++ b/lighting_control_system/style.css
@@ -29,6 +29,15 @@ body {
 #color {
   background-color: #000000;
   height: 60px;
+  border: solid 1px black;
+}
+
+#error {
+  position: fixed;
+  bottom: 0px;
+  right: 20px;
+  z-index: 999;
+  display: none;
 }
 
 .colorpicker-2x .colorpicker-saturation {
